--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -1,5 +1,5 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">lection_xml</string>
     <string name="sad">кнопка</string>
     <string name="aslsal">текст</string>
     <string name="textff">text</string>
